--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.1",
   "private": true,
   "build": {
-      "yarn": "v14.0.0,v16.0.0,v18.0.0",
-      "npm": "v14.0.0,v16.0.0,v18.0.0"
-  },   
+    "yarn": "v14.0.0,v16.0.0,v18.0.0",
+    "npm": "v14.0.0,v16.0.0,v18.0.0"
+  },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.5",
     "@chakra-ui/react": "1.8.8",
@@ -24,7 +24,10 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^4.1.17",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "react": "17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-bootstrap-sweetalert": "^5.2.0",
@@ -39,7 +42,8 @@
     "react-table": "^7.7.0",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "2.0.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
